test/valid/cond.js
var x = false ? 1 : 0;
x;
