test/invalid/cond.js
var x = false ? false : 0;
x;
